# mengai-updiliman-coursework-compilation

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
AI-201/notebooks/: a_star_implementation.ipynb  boosted_perceptrons_and_svm.ipynb  generate-balanced-data-using-SMOTE.ipynb  naive_bayes_spam_filter.ipynb  traffic-signs.ipynb
AI-201/slides/: Optimizing Classification Capability of Classical Machine.pptx
AI-211/: AI211_probset.ipynb  ai211.py
AI-212/: AI212_S2_Problem_4.ipynb  ai212_probset.ipynb
AI-212/notebooks/: AI212_S2_Problem_1.ipynb  AI212_S2_Problem_2.ipynb  AI212_S2_Problem_3.ipynb
AI-221/notebooks/: AI221-Team-Project.ipynb  MachineExercise10_HumanActivityRecognition_NeuralNetworks.ipynb  MachineExercise1112_StudentDropoutSuccessPredict_AutoMLXAI.ipynb  MachineExercise3_WineQuality_LinearModels.ipynb  MachineExercise4_WineQuality_SVR.ipynb  MachineExercise5_CarEvaluation_CrossValidation.ipynb  MachineExercise6_StudentDropoutSuccessPredict_LinearDimReduce.ipynb  MachineExercise7_StudentDropoutSuccessPredict_NonLinearDimReduce.ipynb  MachineExercise8_WineQuality_Clustering.ipynb  MachineExercise9_StudentDropoutSuccessPredict_WeakLearners.ipynb
AI-231/: alexnet-numpy-implementation.ipynb  pruned-resnet18-v2.ipynb  pruned-resnet18-v3-sgd.ipynb
CS-282/src/: grayscale_canny_edge.py  image_clicker.py  video_player.py
ES-204/: actuary_actually.ipynb  day_in_mmda.ipynb  projectile_motion.ipynb  totally_normal.ipynb
